[package]
name = "rust_core"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }
regex = "1.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "wasmbind"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
prost = "0.13"
prost-types = "0.13"
wasm-bindgen = "0.2"
libc = "0.2"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tempfile = "3.10"